--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -42,6 +42,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         
+      - name: Build image
+        run: docker build . --file Dockerfile --tag image  
+        
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
