--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -24,15 +24,7 @@ env:
   IMAGE_NAME: github-runner
 
 jobs:
-  build:
-    # tests could be implemented here
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        
-      - name: Build image
-        run: docker build . --file Dockerfile --tag image
-
+# test: maybe in the future
   push:
     needs: build
 
