--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: github-runner
-        image: mifonpe/github-runner:latest
+        image: docker.pkg.github.com/mifonpe/github-runner/github-runner:latest
         env:
         - name: GITHUB_OWNER
           value: mifonpe
