--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,16 +14,24 @@ spec:
       labels:
         app: github-runner
     spec:
+      imagePullSecrets:
+      - name: regcred
       containers:
       - name: github-runner
-        image: mifonpe/github-runner:latest
+        image: docker.pkg.github.com/mifonpe/github-runner/github-runner:latest
         env:
         - name: GITHUB_OWNER
           value: mifonpe
         - name: GITHUB_REPOSITORY
-          value: gihub-runner
-        - name: GITHUB_PAT 
+          value: alteos-microservice
+        - name: GITHUB_PAT
           valueFrom:
             secretKeyRef:
               name: github-runner-token
               key: token
+        volumeMounts:
+        - mountPath: /home/github/_work
+          name: workspace
+      volumes:
+      - name: workspace
+        emptyDir: {}
