--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -8,12 +8,18 @@ on:
       - develop
     tags:
       - v*
+    paths:
+      - 'Dockerfile'
+      - 'entrypoint.sh' 
           
   pull_request:
     
     branches:
       - master
       - develop
+    paths:
+      - 'Dockerfile'
+      - 'entrypoint.sh'
 env:
   IMAGE_NAME: github-runner
 
