--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -10,7 +10,7 @@ on:
       - v*
     paths:
       - 'Dockerfile'
-      - 'entrypoint.sh' 
+      - 'entrypoint.sh'
           
   pull_request:
     
@@ -24,15 +24,7 @@ env:
   IMAGE_NAME: github-runner
 
 jobs:
-  build:
-    # tests could be implemented here
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        
-      - name: Build image
-        run: docker build . --file Dockerfile --tag image
-
+# test: maybe in the future
   push:
     needs: build
 
@@ -41,6 +33,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        
+      - name: Build image
+        run: docker build . --file Dockerfile --tag image  
         
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
@@ -51,18 +46,13 @@ jobs:
           
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
           # Strip "v" prefix from tag name
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
           # Use Docker `latest` tag convention
           [ "$VERSION" == "master" ] && VERSION=latest
-
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
-
           docker tag image $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
