--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       - name: regcred
       containers:
       - name: github-runner
-        image: docker.pkg.github.com/mifonpe/github-runner/github-runner:latest
+        image: docker.pkg.github.com/mifonpe/github-runner/github-runner:develop
         env:
         - name: GITHUB_OWNER
           value: mifonpe
