--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,12 +18,13 @@ spec:
       - name: regcred
       containers:
       - name: github-runner
-        image: docker.pkg.github.com/mifonpe/github-runner/github-runner:develop
+        image: docker.pkg.github.com/mifonpe/github-runner/github-runner:latest
+        imagePullPolicy: Always
         env:
         - name: GITHUB_OWNER
           value: mifonpe
         - name: GITHUB_REPOSITORY
-          value: alteos-microservice
+          value: microservice-demo
         - name: GITHUB_PAT
           valueFrom:
             secretKeyRef:
